--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,14 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 url: "https://jeniaefimov.github.io"
 
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      show_date: true
+
 remote_theme: mmistakes/minimal-mistakes
 plugins:
   - jekyll-feed
